<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nova</groupId>
	<artifactId>xp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>
		<dependency>
			<groupId>org.nova</groupId>
			<artifactId>nova-components</artifactId>
			<version>0.1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
		    <groupId>io.github.classgraph</groupId>
		    <artifactId>classgraph</artifactId>
		    <version>4.8.181</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>22</source>
					<target>22</target>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>